HtmlUi: Fixed mouse outside handling and glasspane for popup with heads
- Glasspane had the wrong size because popup was 0/0
- If popup is not 0/0 anymore, click on invisible head didn't work
anymore -> added margin to allow click on invisible head

--- a/org.eclipse.scout.rt.ui.html/src/main/js/scout/popup/Popup.css
+++ b/org.eclipse.scout.rt.ui.html/src/main/js/scout/popup/Popup.css
@@ -58,13 +58,9 @@
 }
 
 .popup-body {
-  position: absolute;
+  position: relative;
   border: 1px solid @border-color;
   background-color: @palette-white;
-
-  &.context-menu {
-    position: relative;
-  }
 
   & > .menu-item.context-menu-item-first {
     border-top: 1px solid transparent; //@border-color;
